// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appointment form should pass correct props to all fields 1`] = `
Array [
  <div
    className="sc-htoDjs ktXyoQ"
    tabIndex={-1}
  >
    <h2
      className="sc-htpNat jszPot"
      size="MEDIUM"
    >
      There is a problem
    </h2>
    <ul
      className="sc-bZQynM hmHAnm"
    >
      <li
        className="sc-EHOje cxhhxd"
      >
        <a
          className="sc-bxivhb sc-gzVnrw gdRiKK"
          muted={false}
          onClick={[Function]}
          tabIndex={1}
        >
          Date test message
        </a>
      </li>
      <li
        className="sc-EHOje cxhhxd"
      >
        <a
          className="sc-bxivhb sc-gzVnrw gdRiKK"
          muted={false}
          onClick={[Function]}
          tabIndex={2}
        >
          Start test message
        </a>
      </li>
      <li
        className="sc-EHOje cxhhxd"
      >
        <a
          className="sc-bxivhb sc-gzVnrw gdRiKK"
          muted={false}
          onClick={[Function]}
          tabIndex={3}
        >
          End time test message
        </a>
      </li>
      <li
        className="sc-EHOje cxhhxd"
      >
        <a
          className="sc-bxivhb sc-gzVnrw gdRiKK"
          muted={false}
          onClick={[Function]}
          tabIndex={4}
        >
          Date test message
        </a>
      </li>
      <li
        className="sc-EHOje cxhhxd"
      >
        <a
          className="sc-bxivhb sc-gzVnrw gdRiKK"
          muted={false}
          onClick={[Function]}
          tabIndex={5}
        >
          appointment type test message
        </a>
      </li>
      <li
        className="sc-EHOje cxhhxd"
      >
        <a
          className="sc-bxivhb sc-gzVnrw gdRiKK"
          muted={false}
          onClick={[Function]}
          tabIndex={6}
        >
          location type test message
        </a>
      </li>
    </ul>
  </div>,
  <div
    className="sc-eHgmQL epnRwl"
  >
    <div>
      <label
        className="sc-jWBwVP ehpxti sc-kgoBCf fEvdIb"
        placeholder="Select"
      >
        <span
          className="sc-kGXeez fmtdbL"
        >
          Appointment type
        </span>
        <span
          className="sc-kpOJdX dwdWBG"
        >
          appointment type test message
        </span>
        <select
          className="sc-ckVGcZ kylVOt"
          name="appointmentType"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value=""
        >
          <option
            disabled={true}
            hidden={true}
            value=""
          >
            Select
          </option>
          <option
            value="1"
          >
            app1
          </option>
        </select>
      </label>
      <div
        className="sc-hSdWYo jUvrHG"
      >
        <div
          className="rdt"
        >
          <div>
            <label
              className="sc-fjdhpX jurWKt"
            >
              <span
                className="sc-jzJRlG fYwhH"
              >
                 
                Date
                 
              </span>
              <span
                className="sc-dnqmqq bUFnck"
              >
                Date test message
              </span>
              <input
                className="form-control sc-kAzzGY fPHuuu"
                name="date"
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Select"
                readOnly={true}
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            className="rdtPicker"
          >
            <div
              className="rdtDays"
            >
              <table>
                <thead>
                  <tr>
                    <th
                      className="rdtPrev"
                      onClick={[Function]}
                    >
                      <span>
                        ‹
                      </span>
                    </th>
                    <th
                      className="rdtSwitch"
                      colSpan={5}
                      data-value={0}
                      onClick={[Function]}
                    >
                      January 2017
                    </th>
                    <th
                      className="rdtNext"
                      onClick={[Function]}
                    >
                      <span>
                        ›
                      </span>
                    </th>
                  </tr>
                  <tr>
                    <th
                      className="dow"
                    >
                      Mo
                    </th>
                    <th
                      className="dow"
                    >
                      Tu
                    </th>
                    <th
                      className="dow"
                    >
                      We
                    </th>
                    <th
                      className="dow"
                    >
                      Th
                    </th>
                    <th
                      className="dow"
                    >
                      Fr
                    </th>
                    <th
                      className="dow"
                    >
                      Sa
                    </th>
                    <th
                      className="dow"
                    >
                      Su
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={26}
                    >
                      26
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={27}
                    >
                      27
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={28}
                    >
                      28
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={29}
                    >
                      29
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={30}
                    >
                      30
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={31}
                    >
                      31
                    </td>
                    <td
                      className="rdtDay rdtToday"
                      data-value={1}
                      onClick={[Function]}
                    >
                      1
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={2}
                      onClick={[Function]}
                    >
                      2
                    </td>
                    <td
                      className="rdtDay"
                      data-value={3}
                      onClick={[Function]}
                    >
                      3
                    </td>
                    <td
                      className="rdtDay"
                      data-value={4}
                      onClick={[Function]}
                    >
                      4
                    </td>
                    <td
                      className="rdtDay"
                      data-value={5}
                      onClick={[Function]}
                    >
                      5
                    </td>
                    <td
                      className="rdtDay"
                      data-value={6}
                      onClick={[Function]}
                    >
                      6
                    </td>
                    <td
                      className="rdtDay"
                      data-value={7}
                      onClick={[Function]}
                    >
                      7
                    </td>
                    <td
                      className="rdtDay"
                      data-value={8}
                      onClick={[Function]}
                    >
                      8
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={9}
                      onClick={[Function]}
                    >
                      9
                    </td>
                    <td
                      className="rdtDay"
                      data-value={10}
                      onClick={[Function]}
                    >
                      10
                    </td>
                    <td
                      className="rdtDay"
                      data-value={11}
                      onClick={[Function]}
                    >
                      11
                    </td>
                    <td
                      className="rdtDay"
                      data-value={12}
                      onClick={[Function]}
                    >
                      12
                    </td>
                    <td
                      className="rdtDay"
                      data-value={13}
                      onClick={[Function]}
                    >
                      13
                    </td>
                    <td
                      className="rdtDay"
                      data-value={14}
                      onClick={[Function]}
                    >
                      14
                    </td>
                    <td
                      className="rdtDay"
                      data-value={15}
                      onClick={[Function]}
                    >
                      15
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={16}
                      onClick={[Function]}
                    >
                      16
                    </td>
                    <td
                      className="rdtDay"
                      data-value={17}
                      onClick={[Function]}
                    >
                      17
                    </td>
                    <td
                      className="rdtDay"
                      data-value={18}
                      onClick={[Function]}
                    >
                      18
                    </td>
                    <td
                      className="rdtDay"
                      data-value={19}
                      onClick={[Function]}
                    >
                      19
                    </td>
                    <td
                      className="rdtDay"
                      data-value={20}
                      onClick={[Function]}
                    >
                      20
                    </td>
                    <td
                      className="rdtDay"
                      data-value={21}
                      onClick={[Function]}
                    >
                      21
                    </td>
                    <td
                      className="rdtDay"
                      data-value={22}
                      onClick={[Function]}
                    >
                      22
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={23}
                      onClick={[Function]}
                    >
                      23
                    </td>
                    <td
                      className="rdtDay"
                      data-value={24}
                      onClick={[Function]}
                    >
                      24
                    </td>
                    <td
                      className="rdtDay"
                      data-value={25}
                      onClick={[Function]}
                    >
                      25
                    </td>
                    <td
                      className="rdtDay"
                      data-value={26}
                      onClick={[Function]}
                    >
                      26
                    </td>
                    <td
                      className="rdtDay"
                      data-value={27}
                      onClick={[Function]}
                    >
                      27
                    </td>
                    <td
                      className="rdtDay"
                      data-value={28}
                      onClick={[Function]}
                    >
                      28
                    </td>
                    <td
                      className="rdtDay"
                      data-value={29}
                      onClick={[Function]}
                    >
                      29
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={30}
                      onClick={[Function]}
                    >
                      30
                    </td>
                    <td
                      className="rdtDay"
                      data-value={31}
                      onClick={[Function]}
                    >
                      31
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={1}
                      onClick={[Function]}
                    >
                      1
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={2}
                      onClick={[Function]}
                    >
                      2
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={3}
                      onClick={[Function]}
                    >
                      3
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={4}
                      onClick={[Function]}
                    >
                      4
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={5}
                      onClick={[Function]}
                    >
                      5
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div>
          <label
            className="sc-fjdhpX jurWKt"
            htmlFor="hours"
          >
            <span
              className="sc-jzJRlG fYwhH"
            >
               
              Group start time
               
            </span>
            <span
              className="sc-dnqmqq bUFnck"
            >
              Start test message
            </span>
            <div
              className="sc-jKJlTe jRcriK"
              name="startTime"
            >
              <label
                className="sc-kgoBCf kZSnei"
                defaultValue="--"
                disabled={false}
                id="hours"
                name="hours"
              >
                <span
                  className="sc-kGXeez fmtdbL"
                />
                <select
                  className="sc-ckVGcZ sIgWo"
                  onChange={[Function]}
                  value="undefined"
                >
                  <option>
                    --
                  </option>
                  <option>
                    21
                  </option>
                  <option>
                    22
                  </option>
                  <option>
                    23
                  </option>
                </select>
              </label>
              <label
                className="sc-kgoBCf kZSnei"
                defaultValue="--"
                disabled={false}
                name="minutes"
              >
                <span
                  className="sc-kGXeez fmtdbL"
                />
                <select
                  className="sc-ckVGcZ sIgWo"
                  onChange={[Function]}
                  value="undefined"
                >
                  <option>
                    --
                  </option>
                  <option>
                    00
                  </option>
                  <option>
                    05
                  </option>
                  <option>
                    10
                  </option>
                  <option>
                    15
                  </option>
                  <option>
                    20
                  </option>
                  <option>
                    25
                  </option>
                  <option>
                    30
                  </option>
                  <option>
                    35
                  </option>
                  <option>
                    40
                  </option>
                  <option>
                    45
                  </option>
                  <option>
                    50
                  </option>
                  <option>
                    55
                  </option>
                </select>
              </label>
            </div>
          </label>
        </div>
      </div>
      <label
        className="sc-gZMcBi iJOhOq"
      >
        <input
          checked={false}
          className="sc-gqjmRU cVVaVl"
          name="recurring"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
          value=""
        />
        <span
          className="sc-VigVT bimECd"
        >
          This is a recurring appointment
        </span>
      </label>
    </div>
    <div
      className="sc-cvbbAY iEnSAK"
    >
      <label
        className="sc-jWBwVP ehpxti sc-kgoBCf hxITgT"
        placeholder="Select"
      >
        <span
          className="sc-kGXeez fmtdbL"
        >
          Location
        </span>
        <select
          className="sc-ckVGcZ sIgWo"
          name="location"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value=""
        >
          <option
            disabled={true}
            hidden={true}
            value=""
          >
            Select
          </option>
          <option
            value={1}
          >
            loc1
          </option>
        </select>
      </label>
      <div>
        <label
          className="sc-fjdhpX jurWKt"
          htmlFor="hours"
        >
          <span
            className="sc-jzJRlG fYwhH"
          >
             
            Group end time (optional)
             
          </span>
          <span
            className="sc-dnqmqq bUFnck"
          >
            End time test message
          </span>
          <div
            className="sc-jKJlTe jRcriK"
            name="endTime"
          >
            <label
              className="sc-kgoBCf kZSnei"
              defaultValue="--"
              disabled={false}
              id="hours"
              name="hours"
            >
              <span
                className="sc-kGXeez fmtdbL"
              />
              <select
                className="sc-ckVGcZ sIgWo"
                onChange={[Function]}
                value="undefined"
              >
                <option>
                  --
                </option>
                <option>
                  21
                </option>
                <option>
                  22
                </option>
                <option>
                  23
                </option>
              </select>
            </label>
            <label
              className="sc-kgoBCf kZSnei"
              defaultValue="--"
              disabled={false}
              name="minutes"
            >
              <span
                className="sc-kGXeez fmtdbL"
              />
              <select
                className="sc-ckVGcZ sIgWo"
                onChange={[Function]}
                value="undefined"
              >
                <option>
                  --
                </option>
                <option>
                  00
                </option>
                <option>
                  05
                </option>
                <option>
                  10
                </option>
                <option>
                  15
                </option>
                <option>
                  20
                </option>
                <option>
                  25
                </option>
                <option>
                  30
                </option>
                <option>
                  35
                </option>
                <option>
                  40
                </option>
                <option>
                  45
                </option>
                <option>
                  50
                </option>
                <option>
                  55
                </option>
              </select>
            </label>
          </div>
        </label>
      </div>
      <label
        className="sc-brqgnP jJssVh sc-eNQAEJ hqhhEO"
      >
        <span
          className="sc-hMqMXs kjtFQg"
        >
          Comments (optional)
        </span>
        <textarea
          className="sc-iAyFgw eANhPM"
          name="comments"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows="5"
          type="text"
          value=""
        />
      </label>
    </div>
  </div>,
]
`;

exports[`Appointment form should render correctly 1`] = `
<form
  noValidate={true}
  onSubmit={[Function]}
>
  
  <div
    className="sc-eHgmQL epnRwl"
  >
    <div>
      <label
        className="sc-jWBwVP ehpxti sc-kgoBCf hxITgT"
        placeholder="Select"
      >
        <span
          className="sc-kGXeez fmtdbL"
        >
          Appointment type
        </span>
        <select
          className="sc-ckVGcZ sIgWo"
          name="appointmentType"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value=""
        >
          <option
            disabled={true}
            hidden={true}
            value=""
          >
            Select
          </option>
        </select>
      </label>
      <div
        className="sc-hSdWYo jUvrHG"
      >
        <div
          className="rdt"
        >
          <div>
            <label
              className="sc-fjdhpX bMZnoP"
            >
              <span
                className="sc-jzJRlG fYwhH"
              >
                 
                Date
                 
              </span>
              <input
                className="form-control sc-kAzzGY iPrKue"
                name="date"
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Select"
                readOnly={true}
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            className="rdtPicker"
          >
            <div
              className="rdtDays"
            >
              <table>
                <thead>
                  <tr>
                    <th
                      className="rdtPrev"
                      onClick={[Function]}
                    >
                      <span>
                        ‹
                      </span>
                    </th>
                    <th
                      className="rdtSwitch"
                      colSpan={5}
                      data-value={0}
                      onClick={[Function]}
                    >
                      January 2017
                    </th>
                    <th
                      className="rdtNext"
                      onClick={[Function]}
                    >
                      <span>
                        ›
                      </span>
                    </th>
                  </tr>
                  <tr>
                    <th
                      className="dow"
                    >
                      Mo
                    </th>
                    <th
                      className="dow"
                    >
                      Tu
                    </th>
                    <th
                      className="dow"
                    >
                      We
                    </th>
                    <th
                      className="dow"
                    >
                      Th
                    </th>
                    <th
                      className="dow"
                    >
                      Fr
                    </th>
                    <th
                      className="dow"
                    >
                      Sa
                    </th>
                    <th
                      className="dow"
                    >
                      Su
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={26}
                    >
                      26
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={27}
                    >
                      27
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={28}
                    >
                      28
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={29}
                    >
                      29
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={30}
                    >
                      30
                    </td>
                    <td
                      className="rdtDay rdtOld rdtDisabled"
                      data-value={31}
                    >
                      31
                    </td>
                    <td
                      className="rdtDay rdtToday"
                      data-value={1}
                      onClick={[Function]}
                    >
                      1
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={2}
                      onClick={[Function]}
                    >
                      2
                    </td>
                    <td
                      className="rdtDay"
                      data-value={3}
                      onClick={[Function]}
                    >
                      3
                    </td>
                    <td
                      className="rdtDay"
                      data-value={4}
                      onClick={[Function]}
                    >
                      4
                    </td>
                    <td
                      className="rdtDay"
                      data-value={5}
                      onClick={[Function]}
                    >
                      5
                    </td>
                    <td
                      className="rdtDay"
                      data-value={6}
                      onClick={[Function]}
                    >
                      6
                    </td>
                    <td
                      className="rdtDay"
                      data-value={7}
                      onClick={[Function]}
                    >
                      7
                    </td>
                    <td
                      className="rdtDay"
                      data-value={8}
                      onClick={[Function]}
                    >
                      8
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={9}
                      onClick={[Function]}
                    >
                      9
                    </td>
                    <td
                      className="rdtDay"
                      data-value={10}
                      onClick={[Function]}
                    >
                      10
                    </td>
                    <td
                      className="rdtDay"
                      data-value={11}
                      onClick={[Function]}
                    >
                      11
                    </td>
                    <td
                      className="rdtDay"
                      data-value={12}
                      onClick={[Function]}
                    >
                      12
                    </td>
                    <td
                      className="rdtDay"
                      data-value={13}
                      onClick={[Function]}
                    >
                      13
                    </td>
                    <td
                      className="rdtDay"
                      data-value={14}
                      onClick={[Function]}
                    >
                      14
                    </td>
                    <td
                      className="rdtDay"
                      data-value={15}
                      onClick={[Function]}
                    >
                      15
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={16}
                      onClick={[Function]}
                    >
                      16
                    </td>
                    <td
                      className="rdtDay"
                      data-value={17}
                      onClick={[Function]}
                    >
                      17
                    </td>
                    <td
                      className="rdtDay"
                      data-value={18}
                      onClick={[Function]}
                    >
                      18
                    </td>
                    <td
                      className="rdtDay"
                      data-value={19}
                      onClick={[Function]}
                    >
                      19
                    </td>
                    <td
                      className="rdtDay"
                      data-value={20}
                      onClick={[Function]}
                    >
                      20
                    </td>
                    <td
                      className="rdtDay"
                      data-value={21}
                      onClick={[Function]}
                    >
                      21
                    </td>
                    <td
                      className="rdtDay"
                      data-value={22}
                      onClick={[Function]}
                    >
                      22
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={23}
                      onClick={[Function]}
                    >
                      23
                    </td>
                    <td
                      className="rdtDay"
                      data-value={24}
                      onClick={[Function]}
                    >
                      24
                    </td>
                    <td
                      className="rdtDay"
                      data-value={25}
                      onClick={[Function]}
                    >
                      25
                    </td>
                    <td
                      className="rdtDay"
                      data-value={26}
                      onClick={[Function]}
                    >
                      26
                    </td>
                    <td
                      className="rdtDay"
                      data-value={27}
                      onClick={[Function]}
                    >
                      27
                    </td>
                    <td
                      className="rdtDay"
                      data-value={28}
                      onClick={[Function]}
                    >
                      28
                    </td>
                    <td
                      className="rdtDay"
                      data-value={29}
                      onClick={[Function]}
                    >
                      29
                    </td>
                  </tr>
                  <tr>
                    <td
                      className="rdtDay"
                      data-value={30}
                      onClick={[Function]}
                    >
                      30
                    </td>
                    <td
                      className="rdtDay"
                      data-value={31}
                      onClick={[Function]}
                    >
                      31
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={1}
                      onClick={[Function]}
                    >
                      1
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={2}
                      onClick={[Function]}
                    >
                      2
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={3}
                      onClick={[Function]}
                    >
                      3
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={4}
                      onClick={[Function]}
                    >
                      4
                    </td>
                    <td
                      className="rdtDay rdtNew"
                      data-value={5}
                      onClick={[Function]}
                    >
                      5
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div>
          <label
            className="sc-fjdhpX bMZnoP"
            htmlFor="hours"
          >
            <span
              className="sc-jzJRlG fYwhH"
            >
               
              Group start time
               
            </span>
            <div
              className="sc-jKJlTe eBrFcx"
              name="startTime"
            >
              <label
                className="sc-kgoBCf kZSnei"
                defaultValue="--"
                disabled={true}
                id="hours"
                name="hours"
              >
                <span
                  className="sc-kGXeez fmtdbL"
                />
                <select
                  className="sc-ckVGcZ sIgWo"
                  onChange={[Function]}
                  value="undefined"
                >
                  <option>
                    --
                  </option>
                  <option>
                    00
                  </option>
                  <option>
                    01
                  </option>
                  <option>
                    02
                  </option>
                  <option>
                    03
                  </option>
                  <option>
                    04
                  </option>
                  <option>
                    05
                  </option>
                  <option>
                    06
                  </option>
                  <option>
                    07
                  </option>
                  <option>
                    08
                  </option>
                  <option>
                    09
                  </option>
                  <option>
                    10
                  </option>
                  <option>
                    11
                  </option>
                  <option>
                    12
                  </option>
                  <option>
                    13
                  </option>
                  <option>
                    14
                  </option>
                  <option>
                    15
                  </option>
                  <option>
                    16
                  </option>
                  <option>
                    17
                  </option>
                  <option>
                    18
                  </option>
                  <option>
                    19
                  </option>
                  <option>
                    20
                  </option>
                  <option>
                    21
                  </option>
                  <option>
                    22
                  </option>
                  <option>
                    23
                  </option>
                </select>
              </label>
              <label
                className="sc-kgoBCf kZSnei"
                defaultValue="--"
                disabled={true}
                name="minutes"
              >
                <span
                  className="sc-kGXeez fmtdbL"
                />
                <select
                  className="sc-ckVGcZ sIgWo"
                  onChange={[Function]}
                  value="undefined"
                >
                  <option>
                    --
                  </option>
                  <option>
                    00
                  </option>
                  <option>
                    05
                  </option>
                  <option>
                    10
                  </option>
                  <option>
                    15
                  </option>
                  <option>
                    20
                  </option>
                  <option>
                    25
                  </option>
                  <option>
                    30
                  </option>
                  <option>
                    35
                  </option>
                  <option>
                    40
                  </option>
                  <option>
                    45
                  </option>
                  <option>
                    50
                  </option>
                  <option>
                    55
                  </option>
                </select>
              </label>
            </div>
          </label>
        </div>
      </div>
      <label
        className="sc-gZMcBi iJOhOq"
      >
        <input
          checked={false}
          className="sc-gqjmRU cVVaVl"
          name="recurring"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
          value=""
        />
        <span
          className="sc-VigVT bimECd"
        >
          This is a recurring appointment
        </span>
      </label>
    </div>
    <div
      className="sc-cvbbAY iEnSAK"
    >
      <label
        className="sc-jWBwVP ehpxti sc-kgoBCf hxITgT"
        placeholder="Select"
      >
        <span
          className="sc-kGXeez fmtdbL"
        >
          Location
        </span>
        <select
          className="sc-ckVGcZ sIgWo"
          name="location"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value=""
        >
          <option
            disabled={true}
            hidden={true}
            value=""
          >
            Select
          </option>
        </select>
      </label>
      <div>
        <label
          className="sc-fjdhpX bMZnoP"
          htmlFor="hours"
        >
          <span
            className="sc-jzJRlG fYwhH"
          >
             
            Group end time (optional)
             
          </span>
          <div
            className="sc-jKJlTe eBrFcx"
            name="endTime"
          >
            <label
              className="sc-kgoBCf kZSnei"
              defaultValue="--"
              disabled={true}
              id="hours"
              name="hours"
            >
              <span
                className="sc-kGXeez fmtdbL"
              />
              <select
                className="sc-ckVGcZ sIgWo"
                onChange={[Function]}
                value="undefined"
              >
                <option>
                  --
                </option>
                <option>
                  00
                </option>
                <option>
                  01
                </option>
                <option>
                  02
                </option>
                <option>
                  03
                </option>
                <option>
                  04
                </option>
                <option>
                  05
                </option>
                <option>
                  06
                </option>
                <option>
                  07
                </option>
                <option>
                  08
                </option>
                <option>
                  09
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
                <option>
                  16
                </option>
                <option>
                  17
                </option>
                <option>
                  18
                </option>
                <option>
                  19
                </option>
                <option>
                  20
                </option>
                <option>
                  21
                </option>
                <option>
                  22
                </option>
                <option>
                  23
                </option>
              </select>
            </label>
            <label
              className="sc-kgoBCf kZSnei"
              defaultValue="--"
              disabled={true}
              name="minutes"
            >
              <span
                className="sc-kGXeez fmtdbL"
              />
              <select
                className="sc-ckVGcZ sIgWo"
                onChange={[Function]}
                value="undefined"
              >
                <option>
                  --
                </option>
                <option>
                  00
                </option>
                <option>
                  05
                </option>
                <option>
                  10
                </option>
                <option>
                  15
                </option>
                <option>
                  20
                </option>
                <option>
                  25
                </option>
                <option>
                  30
                </option>
                <option>
                  35
                </option>
                <option>
                  40
                </option>
                <option>
                  45
                </option>
                <option>
                  50
                </option>
                <option>
                  55
                </option>
              </select>
            </label>
          </div>
        </label>
      </div>
      <label
        className="sc-brqgnP jJssVh sc-eNQAEJ kHYzGw"
      >
        <span
          className="sc-hMqMXs kjtFQg"
        >
          Comments (optional)
        </span>
        <textarea
          className="sc-iAyFgw eANhPM"
          name="comments"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows="5"
          type="text"
          value=""
        />
      </label>
    </div>
  </div>
  <div
    className="sc-jDwBTQ DQjvG"
  >
    <button
      className="sc-bdVaJa jyfNnr"
      disabled={false}
      type="submit"
    >
      Continue
    </button>
    <button
      className="sc-bdVaJa kKTxVs"
      disabled={false}
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
</form>
`;
